# aula18_bootcamp

./: exemplo_00.py  pyproject.toml
src/: schema.py
